--- a/presentation.tex
+++ b/presentation.tex
@@ -143,7 +143,7 @@
 
     \begin{tabular}{l}
       \color{gray}{// set of (parent, child) pairs}\\
-      \{\hspace{1pt}("Arathorn", Aragorn)\\
+      \{\hspace{1pt}(Arathorn, Aragorn)\\
       , (Drogo, Frodo)\\
       , (E\"arwen, Galadriel)\\
       , (Finarfin, Galadriel)\\
